[package]
name = "crypto-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
coingecko-rs = "1.0.1"
tokio = { version = "1.25.0", features = ["full"] }
slog = "2.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
json = "0.12.4"
tracing = "0.1.37"