[package]
name = "crypto-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
#coingecko-rs = "1.0.1"
tokio = { version = "1.25.0", features = ["full"] }
slog = "2.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
json = "0.12.4"
tracing = "0.1.37"
opentelemetry = "0.19.0"
reqwest = "0.11"
reqwest-middleware = "0.2.1"
reqwest-retry = "0.2.2"
reqwest-tracing = { version = "0.4.1", features = ["opentelemetry_0_18"] }
tracing-opentelemetry = "0.18"
tracing-subscriber = "0.3"
task-local-extensions = "0.1.4"
async-trait = "0.1.68"
